[gd_scene load_steps=16 format=3 uid="uid://b4r3j8kl04wv6"]

[ext_resource type="Script" path="res://recipe_race/cauldrons/cauldron.gd" id="1_librl"]
[ext_resource type="Script" path="res://recipe_race/cauldrons/visuals.gd" id="2_c78sh"]
[ext_resource type="PackedScene" uid="uid://l24hxg68y6iu" path="res://recipe_race/ingredients/ingredient_list.tscn" id="3_hb7ij"]
[ext_resource type="Script" path="res://recipe_race/cauldrons/cooker.gd" id="4_et40g"]
[ext_resource type="Script" path="res://recipe_race/cauldrons/teleporter.gd" id="5_4fvdk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t8kl7"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_e3l3x"]
radius = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_3q7dd"]
top_radius = 3.0
bottom_radius = 3.0

[sub_resource type="Animation" id="Animation_6wnxs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x0f7d"]
resource_name = "change"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.8, 1.2, 0.8), Vector3(1.1, 0.9, 1.1), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ybehe"]
resource_name = "cooking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.559478, 0, 0.0458508), Vector3(-0.343444, 0, -0.024477), Vector3(0.648748, 0.311856, 0.223406), Vector3(-0.123106, 0.311856, 0.513092)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dp8tt"]
_data = {
"RESET": SubResource("Animation_6wnxs"),
"change": SubResource("Animation_x0f7d"),
"cooking": SubResource("Animation_ybehe")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fbdgo"]
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ulw7d"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_k3yen"]
material = SubResource("StandardMaterial3D_ulw7d")

[node name="Cauldron" type="Node3D"]
script = ExtResource("1_librl")

[node name="Body" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("CylinderShape3D_t8kl7")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_e3l3x")

[node name="Visuals" type="Node3D" parent="."]
script = ExtResource("2_c78sh")

[node name="MeshContainer" type="Node3D" parent="Visuals"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals/MeshContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_3q7dd")
skeleton = NodePath("../../../Body")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
"": SubResource("AnimationLibrary_dp8tt")
}

[node name="IngredientList" parent="Visuals" instance=ExtResource("3_hb7ij")]

[node name="Cooker" type="Node3D" parent="."]
script = ExtResource("4_et40g")

[node name="Timer" type="Timer" parent="Cooker"]
one_shot = true

[node name="CookParticles" type="GPUParticles3D" parent="Cooker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26203, 0)
visible = false
process_material = SubResource("ParticleProcessMaterial_fbdgo")
draw_pass_1 = SubResource("BoxMesh_k3yen")

[node name="Teleporter" type="Node3D" parent="."]
script = ExtResource("5_4fvdk")

[node name="Timer" type="Timer" parent="Teleporter"]
one_shot = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Cooker/Timer" to="Cooker" method="_on_timer_timeout"]
[connection signal="timeout" from="Teleporter/Timer" to="Teleporter" method="_on_timer_timeout"]
